src/scss/components/_forms.scss
.item-form {
  font-family: $font-primary;
}

.sheet-header {
  flex: 0 0 90px;
  // overflow: overflow-y;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: flex-start;
  margin-bottom: 10px;

  .profile-img {
    flex: 0 0 90px;
    height: 100px;
    margin-right: 5px;
    height: 100px;
    width: 100px;
    object-fit: cover;
    object-position: 50% 0;
  }

  .item-img {
    flex: 0 0 64px;
    height: 64px;
    margin-right: 5px;
    height: 64px;
    width: 64px;
    object-fit: cover;
    object-position: 50% 0;
  }

  .header-fields {
    flex: 1;
    input {
      background:none;
      color: $c-black;
    }
  }

  .actor-name,
  .actor-occupation,
  .actor-manner,
  .actor-home {
    h3,
    input {
      text-align: center;
    }
  }
  .charname {
    height: 50px;
    padding: 0px;
    margin: 5px 0;
    border-bottom: 0;
    input {
      width: 100%;
      height: 100%;
      margin: 0;
    }
  }
}

nav.sheet-tabs {
  display: flow;
  width: auto;
  border-top: none;
  height: 35px;
  .item {
    padding: 6px 15px 0;
    margin-left: -5px;
    text-indent: 4px;
    line-height: 16px;
    background: url("../assets/default/paper.png");
    border-top-right-radius: 4px;
    border-top-left-radius: 80px;
    border-top: 0;
    border-bottom: 1px solid rgba(0, 0, 0, 0.15);
    box-shadow:inset 0 -1px 6px 0px $c-black;
    font-size: 14px;
    color: $c-black;
    filter: brightness(0.9);
    &.active {
      filter: none;
      z-index: 1;
      font-weight: bold;
      text-shadow: none;
      box-shadow: none;
      margin-bottom: -1px;
    }
  }
}

nav.sheet-tabs.side {
  display: flow;
  width: -webkit-fill-available;
  position: absolute;
  transform: rotate(90deg);
  top: 255px;
  right: -124px;
  border-top: none;
  height: 35px;
  z-index: -1;
  .item {
    padding: 6px 15px 0;
    margin-left: -5px;
    text-indent: 4px;
    line-height: 16px;
    background: url("../assets/default/paper.png");
    border-top-right-radius: 4px;
    border-top-left-radius: 80px;
    border-top: 0;
    border-bottom: 1px solid rgba(0, 0, 0, 0.15);
    box-shadow:inset 0 -1px 6px 0px $c-black;
    font-size: 14px;
    color: $c-black;
    filter: brightness(0.9);
    &.active {
      filter: none;
      z-index: 1;
      font-weight: bold;
      text-shadow: none;
      box-shadow: none;
      margin-bottom: -1px;
    }
  }
}

nav.sheet-tabs.side.party {
  position: absolute;
  transform: rotate(90deg);
  width: 235px;
  top: 180px;
  right: -135px;
  border-top: none;
  height: 18px;
  z-index: -1;
  .item {
    padding: 1px 10px 0;
    margin-left: -5px;
    text-indent: 4px;
    line-height: 16px;
    background: url("../assets/default/paper.png");
    border-top-right-radius: 4px;
    border-top-left-radius: 80px;
    border-top: 0;
    border-bottom: 1px solid rgba(0, 0, 0, 0.15);
    box-shadow:inset 0 -1px 6px 0px $c-black;
    font-size: 14px;
    filter: brightness(0.9);
    &.active {
      filter: none;
      z-index: 1;
      font-weight: bold;
      text-shadow: none;
      box-shadow: none;
      margin-bottom: -1px;
    }
  }
}

&.sheet nav.sheet-tabs.side.enemy {
  top: 540px;
  right: -450px;
}

&.sheet nav.sheet-tabs.side.agent {
  top: 540px;
  right: -450px;
  border-top: none;
  z-index: -1;
  .item {
    padding: 6px 15px 0;
    margin-left: -5px;
    text-indent: 4px;
    line-height: 16px;
    background: url("../assets/default/paper.png");
    border-top-right-radius: 4px;
    border-top-left-radius: 80px;
    border-top: 0;
    border-bottom: 1px solid rgba(0, 0, 0, 0.15);
    box-shadow: inset 0 -1px 6px 0px $c-black;
    font-size: 14px;
    filter: brightness(0.9);
    &.active {
      filter: none;
      z-index: 1;
      font-weight: bold;
      text-shadow: none;
      box-shadow: none;
      margin-bottom: -1px;
    }
  }
}

